[gd_scene load_steps=2 format=3 uid="uid://b1kiv5nh4whed"]

[ext_resource type="Script" path="res://World/Login.gd" id="1_blpnc"]

[node name="Login" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 361.0
offset_bottom = 180.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Login" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_blpnc")

[node name="NamelLbl" type="RichTextLabel" parent="Control/Login"]
layout_mode = 0
offset_left = 18.0
offset_top = 25.0
offset_right = 178.0
offset_bottom = 52.0
text = "Name:"

[node name="EmailLbl" type="RichTextLabel" parent="Control/Login"]
layout_mode = 0
offset_left = 19.0
offset_top = 64.0
offset_right = 179.0
offset_bottom = 91.0
text = "Email:"

[node name="PassLbl" type="RichTextLabel" parent="Control/Login"]
layout_mode = 0
offset_left = 21.0
offset_top = 102.0
offset_right = 108.0
offset_bottom = 129.0
text = "Password:"

[node name="NameTxt" type="LineEdit" parent="Control/Login"]
layout_mode = 0
offset_left = 107.0
offset_top = 23.0
offset_right = 348.0
offset_bottom = 54.0

[node name="EmailTxt" type="LineEdit" parent="Control/Login"]
layout_mode = 0
offset_left = 106.0
offset_top = 63.0
offset_right = 347.0
offset_bottom = 94.0

[node name="PassTxt" type="LineEdit" parent="Control/Login"]
layout_mode = 0
offset_left = 107.0
offset_top = 101.0
offset_right = 348.0
offset_bottom = 132.0

[node name="RegisterBtn" type="Button" parent="Control/Login"]
layout_mode = 0
offset_left = 72.0
offset_top = 137.0
offset_right = 144.0
offset_bottom = 168.0
text = "Register
"

[node name="LoginBtn" type="Button" parent="Control/Login"]
layout_mode = 0
offset_left = 219.0
offset_top = 138.0
offset_right = 296.0
offset_bottom = 169.0
text = "Login"

[connection signal="button_down" from="Control/Login/RegisterBtn" to="Control/Login" method="_on_register_btn_button_down"]
[connection signal="button_down" from="Control/Login/RegisterBtn" to="Control/Login" method="_on_button_button_down"]
[connection signal="button_down" from="Control/Login/LoginBtn" to="Control/Login" method="_on_button_button_down"]
[connection signal="button_down" from="Control/Login/LoginBtn" to="Control/Login" method="_on_login_btn_button_down"]
